# app/controllers/tours_controller.ts
@@ -14,6 +14,7 @@ import {
 import { Infer } from '@vinejs/vine/types'
 import User from '#models/user'
 import Voucher from '#models/voucher'
+import Receipt from '#models/receipt'
 
 export default class ToursController {
   async index({ response }: HttpContext) {
@@ -118,6 +119,7 @@ export default class ToursController {
     const tour = await Tour.find(tu.tour_id)
     const user = await User.find(tu.user_id)
     const voucherCount = await Voucher.query().where('tour_user_id', tu.id).count('*')
+    const receiptCount = await Receipt.query().where('tour_user_id', tu.id).count('*')
     if (!tour) return response.notFound()
     if (!user) return response.notFound()
     delete tu.user_id
@@ -127,6 +129,7 @@ export default class ToursController {
       data: {
         ...tu,
         voucherCount: Number(voucherCount[0].$extras.count),
+        receiptCount: Number(receiptCount[0].$extras.count),
         tour,
         user,
       },
